--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,8 @@ h2, p{
 #image-holder{
   max-width: 50%;
   border-radius: 8px;
+  align-content: center;
+  position: relative;
 }
 
 .jumbotron{
@@ -99,18 +101,4 @@ h2, p{
 
 #counter-bad{
   color: red;
-}
-
-.image-spot {
-    margin: 10px;
-    width: 115px;
-    height: 115px;
-    line-height: 115px;
-    text-align: center;
-    border: 1px solid red;
-}
-.resize_fit_center {
-    max-width:100%;
-    max-height:100%;
-    vertical-align: middle;
 }
